# avocado

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  compile_shaders.ps1  compile_shaders.sh
assets/shaders/: triangle.frag  triangle.vert
avocadoeng/: CMakeLists.txt
avocadoeng/src/: config.hpp  core.hpp  errorstorage.cpp  errorstorage.hpp  utils.cpp  utils.hpp  vecn.hpp  vertex.hpp  vulkantools.cpp  vulkantools.hpp
avocadoeng/src/math/: constants.hpp  functions.cpp  functions.hpp  matrix.hpp  quaternion.cpp  quaternion.hpp  vecn.hpp
avocadoeng/src/vulkan/: buffer.cpp  buffer.hpp  clipping.hpp  colorattachment.cpp  colorattachment.hpp  commandbuffer.cpp  commandbuffer.hpp  commandpool.cpp  commandpool.hpp  debugutils.cpp  debugutils.hpp  descriptorset.cpp  descriptorset.hpp  format.hpp  graphicspipeline.cpp  graphicspipeline.hpp  graphicsqueue.cpp  graphicsqueue.hpp  image.cpp  image.hpp  logicaldevice.cpp  logicaldevice.hpp  objectdeleter.cpp  objectdeleter.hpp  physicaldevice.cpp  physicaldevice.hpp  pointertypes.hpp  presentqueue.cpp  presentqueue.hpp  queue.cpp  queue.hpp  renderpass.hpp  structuretypes.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp  types.hpp  vertexinputstate.cpp  vertexinputstate.hpp  (+2 more)
avocadoeng/src/vulkan/internal/: structuretypes.hpp
avocadoeng/src/vulkan/states/: colorblendstate.cpp  colorblendstate.hpp  dynamicstate.cpp  dynamicstate.hpp  inputasmstate.cpp  inputasmstate.hpp  multisamplestate.cpp  multisamplestate.hpp  rasterizationstate.cpp  rasterizationstate.hpp  vertexinputstate.cpp  vertexinputstate.hpp  viewportstate.cpp  viewportstate.hpp
avocadoeng/tests/: core.cpp  mathfunctions.cpp  matrix.cpp  quaternion.cpp  utils.cpp  vecn.cpp
game/: CMakeLists.txt
game/src/: application.cpp  application.hpp  game.cpp  gameconfig.hpp
